<resources>
    <string name="app_name">JustJavaApp</string>
    <string name="name">Name</string>
    <string name="topping">Topping</string>
    <string name="topping1">Whiped Creem</string>
    <string name="topping2">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="defaultValue">0</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
</resources>
