<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:inputType="text"
        android:id="@+id/name"
        android:textAppearance="?android:textAppearanceMedium"
        android:hint="@string/name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/topping"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/topping1"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/topping1"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/topping2"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/topping2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_margin="16dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:id="@+id/inc"
            android:onClick="incrementOrder"
            android:text="@string/plus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/value"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:text="@string/defaultValue"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:id="@+id/dec"
            android:onClick="decrementOrder"
            android:text="@string/minus"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/order"
        android:onClick="submitOrder"
        android:text="@string/order"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black"
        android:layout_margin="16dp"
        android:id="@+id/coffees"/>

</LinearLayout>